7_Observability-Stack/logs/kibana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: observability
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway
  hostnames:
    - kibana.192.168.0.110.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: logs-kb-http
          port: 5601
